Fix aligned of key event indicator

--- a/web/dagobert.css
+++ b/web/dagobert.css
@@ -613,6 +613,10 @@ video {
   z-index: 50;
 }
 
+.m-2 {
+  margin: 0.5rem;
+}
+
 .m-8 {
   margin: 2rem;
 }
